# intellij-haskell-430

./: .gitignore  intellijhaskell430.cabal  stack.yaml
pages/: home.md
posts/: 2019-05-15.md
src/: site.hs
templates/: default.html  post.html
